# faststack

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
faststack/: __init__.py  cli.py  healthcheck.py  models.py  util.py
faststack/apps/: README.md  __init__.py  fastapi_app.py  ioc.py  settings.py
tests/: test_app.py  test_container_context.py  test_resolve_generic_type.py
