[project]
name = "faststack"
version = "0.1.1"
description = "Common utilities for FastAPI apps"
dependencies = [
    "asyncer>=0.0.7",
    "typer>=0.12.3",
    "fastapi>=0.111.0",
    "sqlmodel>=0.0.19",
]
readme = "README.md"
authors = [{ name = "Ross Masters", email = "ross@rossmasters.com" }]
requires-python = ">= 3.12, <4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rmasters/faststack"
Issues = "https://github.com/rmasters/faststack/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["faststack"]
