[project]
name = "faststack"
version = "0.3.0"
description = "Common utilities for FastAPI apps"
dependencies = [
    "asyncer>=0.0.7,<1.0",
    "typer>=0.12.3,<1.0",
    "fastapi>=0.111.0,<1.0",
    "sqlmodel>=0.0.19,<1.0",
]
readme = "README.md"
authors = [{ name = "Ross Masters", email = "ross@rossmasters.com" }]
requires-python = ">= 3.12, <4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rmasters/faststack"
Issues = "https://github.com/rmasters/faststack/issues"

[project.optional-dependencies]
apps = [
    "pydantic-settings>=2.6.1",
    "sqlmodel>=0.0.22",
    "that-depends>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["faststack"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
